--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -4,7 +4,7 @@
 
 <%  [["Core Modules","Generate reports, filtering by anything","green-well","tower",
 	 core],
-    ["Follow Ups","Reports, based on follow ups","yellow-well","time",
+    ["Activities","Reports of core modules, based on follow ups, todos and emails","yellow-well","time",
      core],
     ["Users","Reports, that focuses on various attributes of any user","red-well","user",
      [["Single User","user"],["Compare Users","random"],["User Performance","thumbs-up"]]],
