--- a/app/views/registrations/_application.html.erb
+++ b/app/views/registrations/_application.html.erb
@@ -32,7 +32,7 @@
         <small>
            <span id="tag_reg_status_<%= i.id %>" class="ml-10 tag-like green"><%= stat_name %></span>
            <span class="ml-10 tag-like purple"><%= i.course_level_name %></span>
-           <span class="ml-10 tag-like blue"><%= i.institution.type.name %></span>
+           <span class="ml-10 tag-like blue"><%= i.institution.type.name rescue "No type" %></span>
            <span class="ml-10 tag-like blue"'><%= i.institution.group.name rescue "No" %> Group</span>
            <br/>
            <br/>
