--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -1,11 +1,17 @@
 <div class="row border-b">
 	<div class="col-md-8">
-	  <h3>Reports</h3>
+	  <h3>
+	    Reports	    
+	    <span class="tag-like green">
+          <%= (@module || "all").titleize %>
+        </span>	    
+	  </h3>
+
 	</div>
 
 	<div class="col-xs-4 text-right">
 	              <div class="form-group">
-	                  <%= link_to "Saved Reports", "#", {class: "btn btn-primary"} %>                  
+	                  <%= link_to "Saved Reports", saved_reports_path , {class: "btn btn-primary"} %>                  
 	              </div>
 	</div>	
 </div>
