--- a/app/views/registrations/_form_registration_information.html.erb
+++ b/app/views/registrations/_form_registration_information.html.erb
@@ -25,6 +25,21 @@
               {prompt: "-nationality-"},{id: "registration_country_id"}],
               "collection_select",
               ['Nationality',4],7,6) %> 
+
+    <%= bs(f,[:branch_id,Branch.order(:name),
+                      :id,
+                      :name,
+                      {prompt: "-branch-"},{}],
+                      "collection_select",
+                      ["Branch",4],7,6) %>
+  
+    <%= bs(f,[:assigned_to,User.order(:first_name),
+            :id,
+            :first_name,
+            {prompt: "-assign to-"},{}],
+            "collection_select",
+            ["Assign To",4],7,6) %>  
+
     <div class="clear"></div>
     <h4 class="bold-subhead"> Address</h4>
     <br/>
@@ -38,61 +53,14 @@
               {prompt: "-country-"},{}],
               "collection_select",
               ['Country',4],7,6) %> 
+
             
     <%= bs(f,"address_post_code","text_field",['post_code',4],7,6) %>
     <div class="clear"></div>
-    <h4 class="bold-subhead">About</h4>
-    <br/>
-    <div class="col-xs-6">
-      <div class="form-group">
-        <label class="control-label col-xs-4">Source</label>
-      <% %w(direct indirect).each do |i| %>
-        <%= f.radio_button :reg_direct,
-                           i,{:onclick => "$('.source').css('display','none');$('##{i}').show();",
-                              :autocomplete => "off"} %>
-        &nbsp;<%= f.label i %>&nbsp;&nbsp;&nbsp;&nbsp;
-      <% end %>
-      </div>
-    </div>
-    <div class="col-xs-6">
-      <div class="form-group">
-        <label class="control-label col-xs-4">Came Through</label>
-    <div class="col-xs-7">
-    <%= f.collection_select(:reg_source_id,StudentSource.order(:name),
-                                           :id,
-                                           :name,
-                                           {prompt: "-student source-"},
-                                           {id: "indirect",
-                                           style: "display:none;",
-                                           class: "form-control source"}) %>
-    </div>
-    <div class="col-xs-7">
-    <%= f.collection_select(:sub_agent_id,Person.sub_agent,
-                                           :id,
-                                           :first_name,
-                                           {prompt: "-sub agent-"},
-                                           {id: "direct",
-                                           class: "form-control source"}) %>
-    </div>
-      </div>
-    </div>
+    <h4 class="bold-subhead">Source</h4>
+    <%= render 'shared/student_source', f: f %>
 
-   
-   <%= bs(f,[:branch_id,Branch.order(:name),
-                      :id,
-                      :name,
-                      {prompt: "-branch-"},{}],
-                      "collection_select",
-                      ["Branch",4],7,6) %>
-  
-   <%= bs(f,[:assigned_to,User.order(:first_name),
-            :id,
-            :first_name,
-            {prompt: "-assign to-"},{}],
-            "collection_select",
-            ["Assign To",4],7,6) %> 
-   <%= bs(f,[:note,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,4],7,6) %>  
-
+    
 </div>
   
 
