--- a/app/views/analytics/_course_level_weight.html.erb
+++ b/app/views/analytics/_course_level_weight.html.erb
@@ -1,3 +1,8 @@
+<div class="row well">
+	<div id="container">
+	</div>
+</div>
+
 
 <div class="row well">
 	<table class="table table-bordered">
@@ -17,3 +22,42 @@
 
 	</table>
 </div>
+
+<script type="text/javascript">
+ $('#container').highcharts({
+        chart: {
+            type: 'pie',
+            options3d: {
+				enabled: true,
+                alpha: 45
+            }
+        },
+        title: {
+            text: 'Contents of Highsoft\'s weekly fruit delivery'
+        },
+        subtitle: {
+            text: '3D donut in Highcharts'
+        },
+        plotOptions: {
+            pie: {
+                innerSize: 100,
+                depth: 45
+            }
+        },
+        series: [{
+            name: 'Delivered amount',
+            data: [
+                ['Bananas', 8],
+                ['Kiwi', 3],
+                ['Mixed nuts', 1],
+                ['Oranges', 6],
+                ['Apples', 8],
+                ['Pears', 4], 
+                ['Clementines', 4],
+                ['Reddish (bag)', 1],
+                ['Grapes (bunch)', 1]
+            ]
+        }]
+    });
+
+</script>
