--- a/app/views/analytics/_fee_commission.html.erb
+++ b/app/views/analytics/_fee_commission.html.erb
@@ -1,3 +1,7 @@
+<div class="row well">
+	<div id="container">
+	</div>
+</div>
 
 <div class="row well">
 	<table class="table table-bordered">
@@ -9,13 +13,19 @@
 		<tbody>						
 			<% @ordered_output.each do |item| %>
 			   <tr> 
-               <td><h4><b> <%= link_to item[0].titleize,"/institutions/#{item[1][3]}" %><b></h4></td>
-               <td><h4><b> <%= item[1][0] %> </b></h4></td>
-               <td><h4><b> <%= item[1][1] %> </b></h4></td>     
-               <td><h4><b> <%= item[1][2] %> </b></h4></td>               
+               <td><h4> <%= link_to item[0].titleize,"/institutions/#{item[1][3]}" %></h4></td>
+               <td><h4> <%= item[1][0] %> </h4></td>
+               <td><h4> <%= item[1][1] %> </h4></td>     
+               <td><h4> <%= item[1][2] %> </h4></td>               
 			   </tr>
 			<% end %>		    
 		</tbody>
 
 	</table>
 </div>
+
+<script>
+<% if !@charts.nil? %>
+  	init_negative_chart('#container',<%= @charts[0].to_s.html_safe %>,<%= @charts[1].to_json.html_safe %>,'<%= @chart_text %>'); 
+<% end %>
+</script>
