--- a/app/views/enquiries/_preferred_countries.html.erb
+++ b/app/views/enquiries/_preferred_countries.html.erb
@@ -1,6 +1,5 @@
 <!-- prefer countries -->
-<h4 class="form-heading">Preferred Countries</h4>
-<% if false %>
+<h4 class="bold-subhead">Preferred Countries</h4>
 <br/>
 <div class="col-xs-12">
   <%= prefer_countries(f.object_name,
@@ -11,8 +10,6 @@
 <script>
 actMultiSelect('multiple-select');
 </script>
-<% else %>
-  <h5> No countries in countries table!</h5>
-<% end %>
+
 
 
