--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -1,7 +1,10 @@
 <!-- create a new enquiry -->
-            <div class="row row-top">
-              <div class="col-md-12">
+            <div class="row row-top border-b">
+              <div class="col-md-10">
                 <h3>New Enquiry</h3>
+              </div>
+              <div class="col-md-2 form-group">
+                <%= link_to "Enquiries",enquiries_path,{class: "btn btn-primary"} %>
               </div>
             </div>
 
