--- a/app/views/registrations/_basic.html.erb
+++ b/app/views/registrations/_basic.html.erb
@@ -10,6 +10,7 @@
     <ul class="vlsdet-s" >
         <h4 class="bold-subhead">Quick Info</h4>
            <%= li1('ref_no','ref_no','span','small',a)%>
+           <%= li1('channel',a.channel,'span','small')%>
            <%= li1('source',a.source,'span','small')%>
 
            <%= li1('applications',a.quick_st,'span','small')%>
@@ -24,9 +25,11 @@
   <div class="col-xs-5 row-top">
     <ul class="vlsdet pt-0 border-b">
         <h4 class="row-top bold-subhead">Personal</h4>
-        <% %w(first_name surname date_of_birth gender nationality).each do |v| %>
+        <% %w(first_name surname date_of_birth gender).each do |v| %>
         <%= li1(v,v,'span','small',a)%>
         <% end %>
+        <%= li2('nationality',[:country_id,:select,Country,
+                  :nationality],a,nil,"span","strong")%>
     </ul>
     <ul class="vlsdet">
         <h4 class="bold-subhead">Contact</h4>
@@ -46,6 +49,7 @@
            <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
            <%= li1('assigned to',out,'span','small')%>
            <%= li1('assigned by',a.aby,'span','small')%>
+           <%= li1('assigned At',a.assigned_at.to_date,'span','small')%>
         </ul>
     </div>
   </div>
