--- a/app/views/reports/_table.html.erb
+++ b/app/views/reports/_table.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
-  <div class="col-xs-6 text-center bor">
+  <div class="col-xs-6 text-center bor-r">
        <h4>
       <%= page_entries_info @results %>
     </h4>
 
       <%= will_paginate @results, params: {module: @module, heading: @heading, q: @q} %>
   </div>
-  <div class="col-xs-6 row-top">
-        <small>Filtered by</small>
+  <div class="col-xs-6 row-top ">
+        <h4>Filtered by</h4>
         <%= filtered_by(@q) %>
-  </div>    
+  </div>     
 </div>
 <br/>
 <div class="row">
