--- a/app/views/student_sources/index.html.erb
+++ b/app/views/student_sources/index.html.erb
@@ -1,7 +1,72 @@
+<!-- rendering the left menu -->
+<%= render 'resources/menu' %>
 
-<%= render "shared/resources",{resource_disp1: "Student Source",
-                               resource_disp2: "Student Sources",
-                               resource: @student_sources,
-                               new_resource: StudentSource.new }   %>
+<!-- branches more information -->
+
+<% resource_disp1 = "Student Source" %>
+<% resource_disp2 = "Student Sources" %>
+<% resource = @student_sources %>
+<% new_resource = StudentSource.new %>
+
+<div class="col-md-9">
+  <div class="config-content">
+        <div class="row row-top">
+          <h3><%= resource_disp2 %></h3>
+        </div>
+        <div class="row">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Channel</th>
+                <th>Created</th>
+                <th>Last Modified</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% resource.each do |r| %>
+                <tr>
+                  <td><%= link_to r.name,
+                                  student_source_path(r),
+                                  {remote: true,
+                                   onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %></td>
+                  <td><%= r.contact_type.name rescue "No Channel" %></td>
+                  <td><%= r.cby %>(<%= r.created_at.to_s %>)</td>
+                  <td><%= r.uby %>(<%= r.updated_at.to_s %>)</td>
+                  <td>
+                    <% r_name = resource_disp1.downcase.tr(" ","_") %>
+                    <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, 
+                                edit_student_source_path(r),
+                                {remote: true,
+                                onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %>
+                  </td>
+                  <td>              
+                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
+                                r, 
+                                method: :delete, 
+                                data: { confirm: 'Are you sure?' }  %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+
+  <%= render "form", {new_resource: new_resource,
+                      resource_disp1: resource_disp1,
+                      div: "well",
+                      h: "New"} %>
+                      
+  <div id="edit-resource-container"></div>
+</div>
+</div>
+<script type="text/javascript">
+ actmm("configuration");
+ actsm("student_source");
+
+</script>
+
 
 
